--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "galmuri": "^2.40.3",
     "griddy-icons": "^0.1.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
