--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "galmuri": "^2.40.3",
     "griddy-icons": "^0.1.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-ga4": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
